download videos from Yle servers
Copyright 2009-2017 Antti Ajanki
Distributed under the GPL v3

xx xxx 2017, Version 2.27

- --showmeta now prints the resolution for HDS streams
- Fixed --maxbitrate on HDS streams
- Warn if output file extension is unsupported

14 Oct 2017, Version 2.26

- Support wget older than 1.16
- Support older python-requests. Retry is disabled on old python-requests.
- Refuse to install on Python 3

9 Oct 2017, Version 2.25

- This version requires wget
- Retry failing downloads (HTML5 streams and stream metadata only)
- Support --resume on HTML5 streams
- Cancel stalled metadata downloads after a timeout
- Fallback to youtube-dl only when it is useful

23 Sep 2017, Version 2.24

- Option --showmetadata for printing stream metadata (available bitrates, etc.)
- Download only the main content in Elävä arkisto
- Fixed some Elävä arkisto audio streams and titles
- Resuming audio wasn't working when just a few bytes had been downloaded

20 Aug 2017, Version 2.23

- Use HTTPS on Areena

7 Aug 2017, Version 2.22

- Display a progress bar when downloading HTML5 videos
- Get all episodes on an Areena series page, not just dozen latest
- Partially fixed the --showepisodepage output on Elävä Arkisto
- Reduce network traffic by downloading metadata in compressed format

31 Jul 2017, Version 2.21

- Requires Python 2.7
- Get non-adaptive MP4 when available. ffmpeg is need only rarely (never?)
- Fixed the recording of live radio streams
- New option --duration for limitting the max duration to download
- Some invalid argument combinations that were previously silently ignored
  now result in error
- Unrecognized arguments are no longer passed to rtmpdump (use --rtmpdump
  with a script instead)
- Some rtmpdump argument aliases are no longer supported, for example -e or -z
- --showepisodepage was broken and slow
- Pipe HLS stream on a TS container. Better lip sync and compatibility

19 Jul 2017, Version 2.20

- Use setuptools for building and installing