@@ -6,6 +6,7 @@ xx xxx 2017, Version 2.27
 
 - --showmeta now prints the resolution for HDS streams
 - Fixed --maxbitrate on HDS streams
+- --duration now works on RTMP streams
 - Warn if output file extension is unsupported
 
 14 Oct 2017, Version 2.26
